--- a/ui/src/pages/UserDetails/style.css
+++ b/ui/src/pages/UserDetails/style.css
@@ -9,15 +9,17 @@
 .UserDetails .user-data {
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
 .UserDetails .user-data .PageTitle {
     margin-top: 10px;
 }
 
-@media only screen and (min-width: 320px) {
+@media only screen and (min-width: 512px) {
     .UserDetails .user-data {
         flex-direction: row;
+        align-items: flex-start;
     }
 
     .UserDetails .user-details {
